# kaspersky_test

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: consumer.py  entrypoint.sh  main.py  on_startup.py  publisher.py  services.py
app/server/: dependencies.py  main.py
app/server/core/: app.py  errors.py  schemas.py
app/server/routes/api/: __init__.py
app/server/routes/api/v1/: __init__.py  task.py
app/server/routes/core/: main.py
app/server/templates/: base.html  index.html
app/server/utils/: on_startup.py
