[tool.poetry]
name = "kaspersky_test"
version = "0.1.0"
description = ""
authors = ["stefanvasilenko <sv@nuts-agency.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
aio-pika = "^6.8.0"
motor = "^2.5.1"
fastapi = "^0.68.1"
Hypercorn = "^0.11.2"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
